load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "build_stack_bazelle_v1beta1_proto",
    srcs = ["language.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "build_stack_bazelle_v1beta1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/stackb/bazelle/proto",
    proto = ":build_stack_bazelle_v1beta1_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":build_stack_bazelle_v1beta1_go_proto"],
    importpath = "github.com/stackb/bazelle/proto",
    visibility = ["//visibility:public"],
)
