load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "bazelle",
    languages = DEFAULT_LANGUAGES + [
        "//pkg/bazelle:go_default_library",
    ],
    visibility = ["//visibility:public"],
)

# gazelle:prefix github.com/stackb/bazelle
gazelle(
    name = "gazelle",
    gazelle = ":bazelle",
    prefix = "github.com/stackb/bazelle",
)
