load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "subzelle",
    languages = DEFAULT_LANGUAGES + [
        "//pkg/subzelle:go_default_library",
    ],
    visibility = ["//visibility:public"],
)

# gazelle:prefix github.com/stackb/subzelle
gazelle(
    name = "gazelle",
    gazelle = ":subzelle",
    prefix = "github.com/stackb/subzelle",
)
