load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_library(
    name = "go_default_library",
    srcs = [
        "configurer.go",
        "fix.go",
        "generator.go",
        "language.go",
        "plugin.go",
        "process.go",
        "resolver.go",
        "types.go",
    ],
    importpath = "github.com/stackb/subzelle/pkg/subzelle",
    visibility = ["//visibility:public"],
    deps = [
        ":language_go_proto",
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_proto_library(
    name = "language_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/stackb/subzelle/language",
    proto = "//proto:language_proto",
    visibility = ["//visibility:public"],
)
